# NeuroSynth_CS50

./: .dockerignore  .env.example  .env.prod.example  .gitignore  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  Dockerfile.model  PLAN_V5.md  Procfile  README.md  app.py  docker-compose.yml  dump.rdb  dvc.yaml  explore.py  index.html  label_encoder.pkl  main.py  model.pkl  neurological_disease_data.csv  pyproject.toml  render.yaml  run_local.sh  test_payloads.json  test_payloads.ndjson  test_payloads_20.json  train.py
.github/workflows/: deploy.yml  qa.yml  train-validate-v5.yml  train-validate.yml
.vercel/: project.json
artifacts/: model_artifacts_manifest.json  train_orchestrator_summary.json
backend/: __init__.py  api.py  biomarker_model.py  causal_engine.py  celery_app.py  data_pipeline.py  db.py  db_schema.sql  deps.py  disease_classifier.py  feature_schema.py  model_registry.py  models.py  models_v2.py  models_v3.py  report_generator.py  report_generator_v2.py  report_generator_v3.py  report_generator_v4.py  requirements-deploy.txt  requirements.txt  tasks.py  temporal_model.py  wearable_simulator.py
backend/core/: config.py  logging.py  metrics.py  rate_limit.py  security.py
backend/routers/: __init__.py  admin.py  auth.py  biomarkers.py  causal.py  data.py  features.py  health.py  literature.py  patients.py  pipelines.py  predictions.py  predictions_v2.py  predictions_v3.py  reports.py  reports_v2.py
backend/services/: data_pipeline_service.py  kubeflow_service.py
data/synthetic_v2/: realistic.csv
docs/: NeuroSynth_Complete_Documentation.html
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/.storybook/: main.ts  preview.ts
frontend/src/: index.css  main.tsx  styles.theme.css  vite-env.d.ts
frontend/src/lib/: api.ts  (+4 more)
helm/neurosynth/: Chart.yaml  values-prod.yaml  values.yaml
infrastructure/k8s/: model-server.yaml
infrastructure/prometheus/: prometheus.yml
loadtest/: locustfile.py
models/: causal_vars.json  model_manifest.json
scripts/: generate_expanded_dataset.py  load_test.py  pretrain.py  publish_model_artifacts.py  release_gate.py  train_orchestrator.py  train_tft_v5.py  train_v5.py  tune_fusion_weights.py  validate_file_manifest.py  validate_success_metrics.py
scripts/data/: __init__.py  build_realistic_synthetic.py  merge_sources.py  process_oasis.py
src/neurosynth/: __init__.py
src/neurosynth.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
terraform/: main.tf  prod.tfvars.example  variables.tf
tests/: conftest.py  test_adni_connector.py  test_connectome_builder.py  test_connectome_losses.py  test_dicom_processor.py  test_genomic_dataset_collate.py  test_genomic_integration_1000g.py  test_genomic_loss.py  test_genomic_model_forward.py  test_genomic_preprocessor_features.py  test_gnn_forward.py  test_lakehouse_schema.py  test_llm_corpus_builder.py  test_llm_pmid_verify.py  test_llm_schemas.py  test_phase2_connectome_gnn.py  test_phase3_genomics_transformer.py  test_phase4_forecasting_tft.py  test_phase5_causal_engine.py  test_priority1_fixes.py  test_priority2_pipeline.py  test_priority3_models.py  test_priority4_validation.py  test_priority5_inference.py  test_priority6_reports.py  test_priority8_monitoring.py  test_temporal_splits.py  test_tft_calibration_validator.py  test_tft_dataset_factory.py  test_tft_model_predict.py  test_tft_preprocessing.py  test_timescale_sql.py  test_variant_risk_scorer.py  test_wearable_connector.py
tests/causal/: test_causal_preparer.py  test_notears_model_trainer.py  test_patient_counterfactual_io.py
tests/data/: conftest.py  test_dask_features.py  test_data_contracts.py  test_wearable_window_aggregator.py
tests/e2e/: neurosynth.spec.ts  package.json  playwright.config.ts
tests/integration/: test_pipeline_and_tasks_qa.py  test_release_contracts.py  test_v3_endpoints.py
tests/model_validation/: test_model_validation_qa.py
(+768 files in other folders)
